--- a/Cookbook/Resources/Base.lproj/LaunchScreen.storyboard
+++ b/Cookbook/Resources/Base.lproj/LaunchScreen.storyboard
@@ -16,8 +16,20 @@
                     <view key="view" userInteractionEnabled="NO" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreenImage" translatesAutoresizingMaskIntoConstraints="NO" id="fJJ-Lc-Fbp">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="fJJ-Lc-Fbp" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="HYM-fH-5XK"/>
+                            <constraint firstItem="fJJ-Lc-Fbp" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="Hpp-qZ-VHt"/>
+                            <constraint firstItem="fJJ-Lc-Fbp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ad0-qf-eLa"/>
+                            <constraint firstAttribute="bottom" secondItem="fJJ-Lc-Fbp" secondAttribute="bottom" id="eNo-Kd-aRv"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -26,6 +38,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="LaunchScreenImage" width="390" height="844"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
